--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading Investissement</title>
+    <title>Agence d'investissement</title>
     <style>
         /* Style global */
         body {
@@ -205,7 +205,7 @@
 
     <!-- Section principale (contenu masqué par défaut) -->
     <header id="header-section" style="display: none;">
-        <div class="logo">AFRICA INVESTISSEMENT</div>
+        <div class="logo">AGENCE D'INVESTISSEMENT</div>
         <div class="investment-section">
             <div class="balance" id="balance">Votre solde: 0 FCFA</div>
             <button id="invest-button">J'ai investi</button>
