--- a/africa.html
+++ b/africa.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>AFRICA INVESTISSEMENT</h2>
+        <h2>AGENCE D'INVESTISSEMENT</h2>
         <form id="registration-form" action="africa1.html" method="GET">
             <select required name="country" id="formCountry" class="form-select mb-2">
                 <option value="">---Choisir le pays---</option>
