--- a/africa.html
+++ b/africa.html
@@ -176,6 +176,7 @@
 
         const amounts = {
             GUINEA: [
+                { value: "30 000", text: "30 000 FG", receive: "225 000 FG" },
                 { value: "1000000", text: "1 000 000 FG", receive: "5 100 000 FG" },
                 { value: "2000000", text: "2 000 000 FG", receive: "9 300 000 FG" },
                 { value: "3000000", text: "3 000 000 FG", receive: "13 500 000 FG" },
@@ -185,6 +186,7 @@
                 { value: "20000000", text: "20 000 000 FG", receive: "85 200 000 FG" }
             ],
             CFA: [
+                { value: "30000", text: "30 000 F CFA", receive: "225 000 F CFA" },
                 { value: "100000", text: "100 000 F CFA", receive: "650 000 F CFA" },
                 { value: "200000", text: "200 000 F CFA", receive: "1 300 000 F CFA" },
                 { value: "300000", text: "300 000 F CFA", receive: "2 000 000 F CFA" },
