--- a/africa.html
+++ b/africa.html
@@ -193,9 +193,9 @@
                 { value: "20000000", text: "20 000 000 FG", receive: "85 200 000 FG" }
             ],
             CFA: [
-                { value: "30 000", text: "30 000 FG", receive: "300 000 F CFA" },
-                { value: "40 000", text: "40 000 FG", receive: "400 000 F CFA" },
-                { value: "50 000", text: "50 000 FG", receive: "500 000 F CFA" },
+                { value: "30 000", text: "30 000 F CFA", receive: "300 000 F CFA" },
+                { value: "40 000", text: "40 000 F CFA", receive: "400 000 F CFA" },
+                { value: "50 000", text: "50 000 F CFA", receive: "500 000 F CFA" },
                 { value: "100000", text: "100 000 F CFA", receive: "650 000 F CFA" },
                 { value: "200000", text: "200 000 F CFA", receive: "1 300 000 F CFA" },
                 { value: "300000", text: "300 000 F CFA", receive: "2 000 000 F CFA" },
