--- a/africa.html
+++ b/africa.html
@@ -83,7 +83,7 @@
         <form id="registration-form" action="africa1.html" method="GET">
             <select required name="country" id="formCountry" class="form-select mb-2">
                 <option value="">---Choisir le pays---</option>
-                <option value="GUINEA">Benin (FCFA)</option>
+                <option value="BENIN">Benin (FCFA)</option>
                 <option value="GUINEA">Guinée Conakry (FG)</option>
                 <option value="SENEGAL">Sénégal (FCFA)</option>
                 <option value="TOGO">Togo (FCFA)</option>
